Fixes, responsiveness, remove borders on mobile

--- a/less/color.less
+++ b/less/color.less
@@ -284,7 +284,9 @@ header a.active:hover {
 
 .newhomepage .menu--tsula .menu__item:hover .menu__item-name,
 .menu--tsula .menu__item:focus .menu__item-name {
-	color: @cobalt;
+	text-decoration: underline;
+	text-decoration-style: wavy;
+	text-decoration-color: @brown;
 }
 .newhomepage .menu--tsula .menu__item:hover .menu__item-label,
 .menu--tsula .menu__item:focus .menu__item-label {
@@ -292,8 +294,7 @@ header a.active:hover {
 	background: @army;
 }
 
-body .newhomepage .menu--tsula .menu__item:hover .menu__item-name,
-.menu--tsula .menu__item:focus .menu__item-name {
+#face:hover ~ #homebody {
 	background: @cloud;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to bottom, @cloud, @softblue);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to bottom, @cloud, @softblue); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
